# FractalX

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  evaluate.py  prototype.py  pyproject.toml
docs/: testing.md  validation-framework.md
examples/: quick_demo.ipynb
src/fractalx/: __init__.py  dimension.py  interference.py
tests/: test_dimension.py  test_evaluate_metrics.py  test_interference.py  test_prototype.py
